--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -15,17 +16,18 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Rapidmotion</h1>
-        <p></p>
-
-        <p class="view"><a href="https://github.com/spnkr/rapidmotion">View the Project on GitHub <small>spnkr/rapidmotion</small></a></p>
-
+        <h1 class="header">Rapidmotion</h1>
+        <p class="header"></p>
 
         <ul>
-          <li><a href="https://github.com/spnkr/rapidmotion/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/spnkr/rapidmotion/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/spnkr/rapidmotion">View On <strong>GitHub</strong></a></li>
+          <li class="download"><a class="buttons" href="https://github.com/spnkr/rapidmotion/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/spnkr/rapidmotion/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/spnkr/rapidmotion">View On GitHub</a></li>
         </ul>
+
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/spnkr">spnkr</a></p>
+
+
       </header>
       <section>
         <h1>rapidmotion</h1>
@@ -57,7 +59,14 @@
 
 <p>Usefulness may vary.</p>
 
-<h2>Extensions to ProMotion::Screen</h2>
+<h2>UI Extensions</h2>
+
+<p>In a view</p>
+
+<pre><code>addui :button, :purple, title:"Title", bottom:25+25, touch:Proc.new{App.alert("Hi")}
+</code></pre>
+
+<h2>Other</h2>
 
 <h3>Text input</h3>
 
@@ -93,12 +102,11 @@
 </pre></div>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/spnkr">spnkr</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-              <script type="text/javascript">
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		          <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
